--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
-    "next": "15.4.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "recharts": "^3.1.0"
   },
